--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="styles.css" />
+    <!--
+      Note the order of the scripts is relevant:
+      - the Cast API must be downloaded before the shim
+      - slidy.js must be downloaded before slidy-remote
+    -->
     <script type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
     <script type="text/javascript" src="presentation-api-shim.js"></script>
-    <script type="text/javascript" src="slidy.js"></script>
+    <script type="text/javascript" src="http://www.w3.org/Talks/Tools/Slidy2/scripts/slidy.js"></script>
     <script type="text/javascript" src="slidy-remote.js"></script>
     <script type="text/javascript" src="sender.js"></script>
   </head>
