Editorial changes: a few comments added to clarify code

--- a/receiver.html
+++ b/receiver.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf8" />
-    <title>Iframe caster</title>
+    <title>HTML Slidy receiver</title>
     <script src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
     <script type="text/javascript" src="presentation-api-shim.js"></script>
     <script type="text/javascript" src="receiver.js"></script>
