Updated list of receiver applications. Switched to HTTPS
The use of HTTPS addresses is required to support Google Cast devices,
otherwise the receiver apps cannot be published as Cast receiver apps.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
       <form class="pure-form pure-form-stacked">
         <label for="url">URL of the slide show to project:
-          <br/>(note slide show origin <strong>must be</strong> that of this page or <code>www.w3.org</code>)</label>
-        <input id="url" name="url" type="text" value="http://www.w3.org/Talks/Tools/Slidy2/Overview.html" class="pure-input-1"/>
+          <br/>(note slide show origin <strong>must be</strong> one of <code>https://www.w3.org</code> or <code>https://tidoust.github.io</code>)</label>
+        <input id="url" name="url" type="text" value="https://www.w3.org/Talks/Tools/Slidy2/Overview.html" class="pure-input-1"/>
         <input type="submit" value="Open slide show" class="pure-button pure-button-primary" />
       </form>
 
