--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <form class="pure-form pure-form-stacked">
         <label for="url">URL of the slide show to project:
           <br/>(note slide show origin <strong>must be</strong> one of <code>https://www.w3.org</code> or <code>https://tidoust.github.io</code>)</label>
-        <input id="url" name="url" type="text" value="https://tidoust.github.io/slidyremote/" list="talks" class="pure-input-1"/>
+        <input id="url" name="url" type="text" value="https://tidoust.github.io/slidyremote/slideshow/" list="talks" class="pure-input-1"/>
         <datalist id="talks">
-          <option value="https://tidoust.github.io/slidyremote/" />
+          <option value="https://tidoust.github.io/slidyremote/slideshow/" />
           <option value="https://www.w3.org/Talks/Tools/Slidy2/" />
           <option value="http://www.w3.org/2011/Talks/1122-mwabp-epita-fd/" />
           <option value="http://www.w3.org/2009/Talks/03-mobileinternet/" />
