Forced CSS and JS to be loaded over HTTPs

--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -6,8 +6,8 @@
     <meta name="copyright" 
      content="Copyright &#169; 2014 W3C (MIT, ERCIM, Keio, Beihang)" /> 
     <link rel="stylesheet" type="text/css" media="screen, projection, print" 
-     href="http://www.w3.org/Talks/Tools/Slidy2/styles/slidy.css" /> 
-    <script src="http://www.w3.org/Talks/Tools/Slidy2/scripts/slidy.js" 
+     href="//www.w3.org/Talks/Tools/Slidy2/styles/slidy.css" /> 
+    <script src="//www.w3.org/Talks/Tools/Slidy2/scripts/slidy.js" 
      charset="utf-8" type="text/javascript"></script> 
     <style type="text/css">
     </style>
