Added slide on need to use HTTPS

--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="slide">
-      <h1>Restricted to a couple of origins</h1>
+      <h1>Origin restrictions</h1>
       <p>The receiver side opens up the requested slide show in a child iframe. To control that iframe, the slide show <strong>must</strong> be served from the same origin as the receiver app.</p>
       <p>The demo only knows about two receiver apps:</p>
       <ul>
@@ -61,6 +61,11 @@
       </ul>
       <p>Receiver apps have been published as custom Google Cast receiver apps.
         <br/>As such, they may run on any Google Cast device.</p>
+    </div>
+
+    <div class="slide">
+      <h1>HTTPS only</h1>
+      <p>Google requires that receiver apps be served over HTTPS.</p>
     </div>
 
     <div class="slide">
