Fixed a couple of typos in text of demo page

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
       <p>Instructions:</p>
       <ol>
-        <li>Enter the URL of a slide show made with <a href="http://www.w3.org/Talks/Tools/Slidy2/Overview.html">HTML Slidy</a> above. Note the slidy show origin <strong>must be</strong> one of <code>http(s)://www.w3.org</code> or <code>https://tidoust.github.io</code>.</li>
-        <li>Hit <code>Open slide show</code>. The slide show will open on a second screen if available or in a separate window otherwise, provided you allow that window to pop-up!</li>
+        <li>Enter the URL of a slide show made with <a href="http://www.w3.org/Talks/Tools/Slidy2/Overview.html">HTML Slidy</a> above. The slide show origin <strong>must be one of <code>http(s)://www.w3.org</code> or <code>https://tidoust.github.io</code></strong>.</li>
+        <li>Hit "<em>Open slide show</em>". The slide show will open on a second screen if available or in a separate window otherwise, provided you allow that window to pop up!</li>
         <li>Use the Slidy remote on this page to control the running slide show (key presses and gestures are supported as well)</li>
       </ol>
 
