Presentation API shim: more logging messages to track potential issues
Logging messages are now disabled by default. Caller needs to set
navigator.presentationLogLevel to one of "log", "info", "warn",
"error", "none" or null (which also means "none") to see messages
on the console.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       - slidy.js must be downloaded before slidy-remote
     -->
     <script type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
+    <script type="text/javascript">navigator.presentationLogLevel = 'log';</script>
     <script type="text/javascript" src="presentation-api-shim.js"></script>
     <script type="text/javascript" src="http://www.w3.org/Talks/Tools/Slidy2/scripts/slidy.js"></script>
     <script type="text/javascript" src="slidy-remote.js"></script>
