--- a/receiver.html
+++ b/receiver.html
@@ -3,6 +3,7 @@
     <meta charset="utf8" />
     <title>HTML Slidy receiver</title>
     <script src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
+    <script type="text/javascript">navigator.presentationLogLevel = 'log';</script>
     <script type="text/javascript" src="presentation-api-shim.js"></script>
     <script type="text/javascript" src="receiver.js"></script>
     <style>
