Added acknowledgments section to mention the MediaScape EU project

--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
         <p>For feedback on the demo or on the Presentation API itself, use the <a href="mailto:public-webscreens@w3.org">public-webscreens@w3.org</a> mailing-list (with <a href="http://lists.w3.org/Archives/Public/public-webscreens">public archive</a>) or get in touch with <a href="mailto:fd@w3.org">Francois Daoust</a> if you do not wish your comment to appear in public.</p>
 
         <p>Feel free to use <a href="http://github.com/tidoust/slidyremote/issues">GitHub issue tracker</a> to report bugs and feature requests.</p>
+
+        <h3>Acknowledgements</h3>
+        <p>This work was done with support from the European Commission under grant agreement no: 610404 (<a href="http://www.mediascapeproject.eu/">MediaScape</a>).</p>
+
       </section>
     </div>
 
